# okta-group-manager

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  chainlit.md  pyproject.toml  setup.sh
.chainlit/: config.toml
app/: agent.py  auth.py  main.py  okta_client.py
app/static/: index.html
config/: group_owners.yaml
