[project]
name = "okta-group-manager"
version = "0.1.0"
description = "AI-powered Okta group management chatbot for group owners"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=1.3.0",
    "anthropic>=0.40.0",
    "mcp>=1.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
