[project]
name = "okta-group-manager"
version = "0.1.0"
description = "AI-powered Okta group management chatbot for group owners"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "authlib>=1.3.0",
    "httpx>=0.24.0",
    "itsdangerous>=2.1.0",
    "anthropic>=0.40.0",
    "mcp>=1.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "truststore>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
